--- a/style.css
+++ b/style.css
@@ -1,67 +1,142 @@
-*,*::before,*::after {
-    box-sizing: border-box;
-    font-family: Gotham Rounded;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
-}
-:root{
-    --hue-neutral:#0a0a0a;
-    --hue-wrong: #da0000;
-    --hue-correct: #54e600;
-}
-
-body{
+* {
     margin: 0;
     padding: 0;
-    display: flex;
+    box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.25rem;
+}
+:root{
+    --cor-primaria:#141414;
+    --cor-secundaria:#fafdfb;
+    --cor-destaque:#0de970;
+}
+
+body {
     width: 100vw;
     height: 100vh;
-    justify-content: center;
-    align-items: center;
-    background-color: var(--hue-neutral);
+    background: var(--cor-primaria);
+    color: var(--cor-secundaria);
 }
 
-body.correct{
-    background-color: var(--hue-correct);
-
+main {
+    width: 100%;
+    height: 100%;
+    padding: 1rem; /* espacamento interno */
 }
 
-body.wrong{
-   background-color: var(--hue-wrong);
-}
-
-.container{
-    width: 40rem;
-    height: 15rem;
-    max-width: 80%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #f5f6f8;
-    border-radius: 0.5rem;
-}
-.hide{
+section {
+    width: 100%;
+    margin: 0 auto;
+    padding: 1rem;
+    margin-bottom: 0.625rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-.btn-grid{
-    width: 25rem;
-    display: flex;
-    flex-direction: column;
-    margin: 0.5rem;
+h1 {
+    text-align: center;
+    font-size: 1.75rem;
+    margin: 0.625rem;
 }
 
-.btn{
-    display: flex;
-    justify-content: flex-start;
-    background-color: #f5f6f8;
-    border: none;
-    font-family: Arial;
+.centro {
+    text-align: center;
 }
 
-.controls{
+.questao {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
+#numQuestao {
+    display: block;
+    background: var(--cor-destaque);
+    padding: 4px 10px 2px 10px;
+    border-radius: 50%;
+}
+
+#pergunta {
+    margin-left: 1rem;
+}
+
+/* article que acomoda a questao completa */
+.questoes {
+    padding: 1.5rem;
+    border: 1px solid var(--cor-secundaria);
+    border-radius: 5px;
+    margin-bottom: 2rem;
+}
+
+.questoes ol li {
+    display: block;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.questoes ol li:hover {
+    background: var(--cor-destaque);
+    color: var(--cor-primaria);
+    cursor: pointer;
+}
+
+.bloqueado {
+    display: none;
+}
+
+.bloqueado li:hover {
+    display: none;
+}
+
+#instrucoes {
+    background: var(--cor-secundaria);
+    color: var(--cor-primaria);
+    padding: 0.625rem;
+    border-radius: 8px;
+
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+    animation: piscar .75s infinite alternate;
+}
+
+#aviso {
+    color: var(--cor-destaque);
+}
+
+/* ANIMACAO */
+
+/* Animar o input */
+@keyframes piscar {
+    0% {
+        filter: drop-shadow(0 0 15px var(--cor-destaque));
+        -webkit-filter: drop-shadow(0 0 15px var(--cor-destaque));
+        -moz-filter: drop-shadow(0 0 15px var(--cor-destaque));
+        -o-filter: drop-shadow(0 0 15px var(--cor-destaque));
+        -ms-filter: drop-shadow(0 0 15px var(--cor-destaque) );
+    }
+    100% {
+    }
+}
+
+.animar {
+    animation: piscar .75s infinite alternate;
+}
+
+.aparecer {
+    animation: aparecer .5s infinite alternate;
+}
+
+@keyframes aparecer {
+    0% {
+        opacity: 0
+    }
+    100% {
+        opacity: 1
+    }
+}
